--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
+    <link rel="icon" href="/favicon.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@800&display=swap" rel="stylesheet">
     <title>Student Voices in AI</title>
-  </head>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
